3-ecncrypting-end-user-traffic/3.2-exposing-multiple-domains-at-the-ingress-gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-virtual-service
  namespace: default
spec:
  hosts:
  - "httpbin.boutiquestore.com"
  gateways:
  - httpbin-gateway
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 8000
